tests/fail/t06.e
symbol already in smybol table, function has same name as a variable
